--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,14 +1,13 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
-{% block page_title %} login {% endblock %}
+{% block page_title %} Password Change {% endblock %}
 
 {% block content %}
     <div class="container">
         <form action="" method="post">
             {% csrf_token %}
             {{ form | crispy }}
-            <button type="submit">Log In</button>
-            <a href="{% url 'password_reset' %}">forget my password</a>
+            <button type="submit">change</button>
         </form>
     </div>
 {% endblock %}
