add templaye filters to book_list and book_detail

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,4 +16,5 @@
     {% else %}
         <a href="{% url 'login' %}">Log In</a> | <a href="{% url 'signup' %}">sign Up</a>
     {% endif %} 
+    <h3><a href="{% url 'book_list' %}">Book List</a></h3>
 {% endblock %}
