--- a/books/Templates/books/book_detail.html
+++ b/books/Templates/books/book_detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 		<h1>{{ book.title }}</h1>
         <h3>از {{ book.author }}</h3>
-        <h4>خلاصه کتاب: {{ book.brief }}</h4>
+        <h4>خلاصه کتاب: {{ book.brief|linebreaks}}</h4>
         <h2>قیمت: {{ book.price }} </h2>
     <br>
     <a href="{% url 'book_list' %}" class="btn btn-primary">لیست کتابها </a>
