--- a/books/Templates/books/book_list.html
+++ b/books/Templates/books/book_list.html
@@ -6,8 +6,10 @@
      <h4><a href="{% url 'book_create' %}">ایجاد کتاب</a></h4>
 	{% for book in books %}
 {#        <a href="{% url 'book_detail' book.id %}"><h2>{{ book.title }}</h2></a>#}
-        <a href="{{ book.get_absolute_url}}"><h2>{{ book.title }}</h2></a>
+        <a href="{{ book.get_absolute_url }}"><h2>{{ book.title | capfirst }}</h2></a>
         <h3>از {{ book.author }}</h3>
+        <h4>خلاصه: {{ book.brief | truncatewords:10}} <a href="{% url 'book_detail' book.id %}" class="btn btn-success"> read More </a></h4>
+{#        <a href="{% url 'book_detail' book.id %}" class="btn btn-success"> read More </a>#}
         <br>
 	{% endfor %}
 	
