--- a/books/Templates/books/book_detail.html
+++ b/books/Templates/books/book_detail.html
@@ -1,11 +1,13 @@
 {% extends '_base.html' %}
 
+{% load book_tags %}
+
 {% block page_title %} توضیحات کتاب {% endblock %}
 
 {% block content %}
 		<h1>{{ book.title }}</h1>
         <h3>از {{ book.author }}</h3>
-        <h4>خلاصه کتاب: {{ book.brief|linebreaks}}</h4>
+        <h4>خلاصه کتاب: {{ book.brief|to_lowercase|linebreaks}}</h4>
         <h2>قیمت: {{ book.price }} </h2>
     <br>
     <a href="{% url 'book_list' %}" class="btn btn-primary">لیست کتابها </a>
