--- a/books/Templates/books/book_list.html
+++ b/books/Templates/books/book_list.html
@@ -1,5 +1,7 @@
 {% extends '_base.html' %}
 
+{% load book_tags %}
+
 {% block page_title %} لیست کتابها {% endblock %}
 
 {% block content %}
@@ -8,7 +10,7 @@
 {#        <a href="{% url 'book_detail' book.id %}"><h2>{{ book.title }}</h2></a>#}
         <a href="{{ book.get_absolute_url }}"><h2>{{ book.title | capfirst }}</h2></a>
         <h3>از {{ book.author }}</h3>
-        <h4>خلاصه: {{ book.brief | truncatewords:10}} <a href="{% url 'book_detail' book.id %}" class="btn btn-success"> read More </a></h4>
+        <h4>خلاصه: {{ book.brief | truncatewords:10 | to_lowercase | linebreaks}} <a href="{% url 'book_detail' book.id %}" class="btn btn-success"> read More </a></h4>
 {#        <a href="{% url 'book_detail' book.id %}" class="btn btn-success"> read More </a>#}
         <br>
 	{% endfor %}
