--- a/books/Templates/books/book_list.html
+++ b/books/Templates/books/book_list.html
@@ -5,14 +5,47 @@
 {% block page_title %} لیست کتابها {% endblock %}
 
 {% block content %}
-     <h4><a href="{% url 'book_create' %}">ایجاد کتاب</a></h4>
-	{% for book in books %}
-{#        <a href="{% url 'book_detail' book.id %}"><h2>{{ book.title }}</h2></a>#}
-        <a href="{{ book.get_absolute_url }}"><h2>{{ book.title | capfirst }}</h2></a>
-        <h3>از {{ book.author }}</h3>
-        <h4>خلاصه: {{ book.brief | truncatewords:10 | to_lowercase | linebreaks}} <a href="{% url 'book_detail' book.id %}" class="btn btn-success"> read More </a></h4>
-{#        <a href="{% url 'book_detail' book.id %}" class="btn btn-success"> read More </a>#}
-        <br>
-	{% endfor %}
-	
+    {#     <h4><a href="{% url 'book_create' %}">ایجاد کتاب</a></h4>#}
+    {#	{% for book in books %}#}
+    {#        <a href="{% url 'book_detail' book.id %}"><h2>{{ book.title }}</h2></a>#}
+    {#        <a href="{{ book.get_absolute_url }}"><h2>{{ book.title | capfirst }}</h2></a>#}
+    {#        <h3>از {{ book.author }}</h3>#}
+    {#        <h4>خلاصه: {{ book.brief | truncatewords:10 | to_lowercase | linebreaks}} <a href="{% url 'book_detail' book.id %}" class="btn btn-success"> read More </a></h4>#}
+    {#        <a href="{% url 'book_detail' book.id %}" class="btn btn-success"> read More </a>#}
+    {#        <br>#}
+    {#	{% endfor %}#}
+
+    <div class="container mt-4">
+    <h4><a href="{% url 'book_create' %}">ایجاد کتاب</a></h4>
+        <div class="row flex-row-reverse justify-content-md-center">
+            {% for book in books %}
+            <div class="card m-2" style="max-width: 45%">
+                <div class="row g-0 h-100" dir="rtl">
+                    <div class="col-md-4">
+                        <img src="https://m.media-amazon.com/images/I/610QDSRlLYL._AC_UF1000,1000_QL80_.jpg"
+                             class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8 h-100">
+                        <div class="d-flex flex-column justify-content-between h-100">
+                            <div class="card-body">
+                                <h3 class="card-title"><strong>{{ book.title }}</strong></h3>
+                                <p class="card-text pt-3">{{ book.brief|truncatewords:10 }}</p>
+                                <p class="text-muted">نویسنده: {{ book.author }}</p>
+                                <a href="{{ book.get_absolute_url }}" class="btn btn-success"> read More </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <footer class="bg-light text-center text-lg-start mt-5">
+        <div class="text-center bg-grey">
+            <p>دوره آموزشی جنگو <a class="text-dark" href="https://codingyar.com/" target="_blank">کدینگ یار</a></p>
+        </div>
+    </footer>
+
+
 {% endblock %}
