--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,29 +12,46 @@
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
+{% block style %}
+	
+{% endblock %}
+
     <title>{% block page_title %} {% endblock %}</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-info" dir="rtl">
     <div class="container">
-        <a class="navbar-brand" href="#">
-            <img src="icons/book.png" alt="" height="30"
+        <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static 'icons/book.png' %}" alt="" height="30"
                  class="d-inline-block align-text-top">
         </a>
-        <a class="navbar-brand mx-3" href="#">کتاب یار</a>
+        <a class="navbar-brand mx-3" href="{% url 'home' %}">کتاب یار</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">خانه</a>
-                <a class="nav-link" href="#">اضافه کردن کتاب</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'book_list' %}">خانه</a>
+                <a class="nav-link" href="{% url "book_create" %}">اضافه کردن کتاب</a>
             </div>
         </div>
-        <div class="mx-2 text-white">خوش آمدی {{ user.username }} | <a class="link-light text-decoration-none" href="{% url 'logout' %}">خروج</a>
+{#        <div class="mx-2 text-white">خوش آمدی {{ user.username }} | <a class="link-light text-decoration-none"#}
+{#                                                                       href="{% url 'logout' %}">خروج</a>#}
+
+            {% if user.is_authenticated %}
+                <form action="{% url 'logout' %}" method="post">
+                    <p>Welcome {{ user.username }} | <button type="submit">log Out</button></p>
+                    {% csrf_token %}
+                </form>
+            {% else %}
+                <a href="{% url 'login' %}">Log In</a> | <a href="{% url 'signup' %}">sign Up</a>
+            {% endif %}
+
+            <p>Welcome {{ user.username }} | <a href="{% url 'logout' %}">Log Out</a></p>
+            <a href="{% url 'logout' %}">Log Outttt</a>
         </div>
-    </div>
+{#    </div>#}
 </nav>
 <div class="container">
     {% block content %}
