--- a/books/Templates/books/book_detail.html
+++ b/books/Templates/books/book_detail.html
@@ -27,8 +27,13 @@
                     <div class="row w-sm-75 w-100">
                         <div class="col-xs-12 col-md-3 d-flex justify-content-center">
                             <div>
-                                <img src="https://m.media-amazon.com/images/I/610QDSRlLYL._AC_UF1000,1000_QL80_.jpg"
-                                     class="img-fluid rounded-start" alt="...">
+                                {% if book.cover %}
+                                    <img src="{{ book.cover.url }}"
+                                         class="img-fluid rounded-start" alt="...">
+                                	{% else %}
+                                    <img src="..\media\covers\no photo.png"
+                                         class="img-fluid rounded-start" alt="...">
+                                {% endif %} 
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-6 text-center text-md-end mt-md-1 mt-4">
@@ -48,7 +53,10 @@
                 <div class="d-flex justify-content-center">
                     <div class="my-3 p-5 w-sm-75 w-100">
                         {{ book.brief }}
+                        <a href="{% url 'book_delete' book.id %}" class="btn btn-danger"> DELETE </a>
+                        <a href="{% url 'book_update' book.id %}" class="btn btn-warning"> update </a>
                     </div>
+                    
                 </div>
                 
                 <div class="d-flex justify-content-center">
