--- a/books/Templates/books/book_list.html
+++ b/books/Templates/books/book_list.html
@@ -16,27 +16,32 @@
     {#	{% endfor %}#}
 
     <div class="container mt-4">
-    <h4><a href="{% url 'book_create' %}">ایجاد کتاب</a></h4>
+        <h4><a href="{% url 'book_create' %}">ایجاد کتاب</a></h4>
         <div class="row flex-row-reverse justify-content-md-center">
             {% for book in books %}
-            <div class="card m-2" style="max-width: 45%">
-                <div class="row g-0 h-100" dir="rtl">
-                    <div class="col-md-4">
-                        <img src="https://m.media-amazon.com/images/I/610QDSRlLYL._AC_UF1000,1000_QL80_.jpg"
-                             class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8 h-100">
-                        <div class="d-flex flex-column justify-content-between h-100">
-                            <div class="card-body">
-                                <h3 class="card-title"><strong>{{ book.title }}</strong></h3>
-                                <p class="card-text pt-3">{{ book.brief|truncatewords:10 }}</p>
-                                <p class="text-muted">نویسنده: {{ book.author }}</p>
-                                <a href="{{ book.get_absolute_url }}" class="btn btn-success"> read More </a>
+                <div class="card m-2" style="max-width: 45%">
+                    <div class="row g-0 h-100" dir="rtl">
+                        <div class="col-md-4">
+                            {% if book.cover %}
+                                <img src="{{ book.cover.url }}"
+                                     class="img-fluid rounded-start" alt="...">
+                            {% else %}
+                                <img src="..\media\covers\no photo.png"
+                                     class="img-fluid rounded-start" alt="...">
+                            {% endif %}
+                        </div>
+                        <div class="col-md-8 h-100">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                <div class="card-body">
+                                    <h3 class="card-title"><strong>{{ book.title }}</strong></h3>
+                                    <p class="card-text pt-3">{{ book.brief|truncatewords:10 }}</p>
+                                    <p class="text-muted">نویسنده: {{ book.author }}</p>
+                                    <a href="{{ book.get_absolute_url }}" class="btn btn-success"> read More </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
             {% endfor %}
         </div>
     </div>
