--- a/books/Templates/books/book_list.html
+++ b/books/Templates/books/book_list.html
@@ -45,6 +45,30 @@
             {% endfor %}
         </div>
     </div>
+    {{ page_obj.number }}
+    {% if page_obj.has_previous %}
+        pre - {{ page_obj.previous_page }}
+    {% endif %}
+    {% if page_obj.has_next %}
+        next - {{ page_obj.next_page }}
+    {% endif %}
+
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            {% if page_obj.has_previous %}
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a></li>
+            {% endif %}
+            <li class="page-item"><a class="page-link" href="#">this</a></li>
+            {% if page_obj.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+
+
+
 
     <footer class="bg-light text-center text-lg-start mt-5">
         <div class="text-center bg-grey">
