--- a/books/Templates/books/book_detail.html
+++ b/books/Templates/books/book_detail.html
@@ -1,5 +1,5 @@
 {% extends '_base.html' %}
-
+{% load crispy_forms_tags %}
 {% load book_tags %}
 
 {% block page_title %} توضیحات کتاب {% endblock %}
@@ -30,10 +30,10 @@
                                 {% if book.cover %}
                                     <img src="{{ book.cover.url }}"
                                          class="img-fluid rounded-start" alt="...">
-                                	{% else %}
+                                {% else %}
                                     <img src="..\media\covers\no photo.png"
                                          class="img-fluid rounded-start" alt="...">
-                                {% endif %} 
+                                {% endif %}
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-6 text-center text-md-end mt-md-1 mt-4">
@@ -56,42 +56,40 @@
                         <a href="{% url 'book_delete' book.id %}" class="btn btn-danger"> DELETE </a>
                         <a href="{% url 'book_update' book.id %}" class="btn btn-warning"> update </a>
                     </div>
-                    
+
                 </div>
-                
-                <div class="d-flex justify-content-center">
-                <div class="card shadow my-3 p-5 w-sm-75 w-100">
-                    <h2 class="mb-5">نظرات:</h2>
-                    {% for comment in comments %}
-                    <div class="border-bottom mb-3">
-                        <h5 class="mb-3">{{ comment.user.username }} نظر داد که:</h5>
-                        <p>{{ comment.text|linebreaks }}</p>
-                    </div>
-                    {% endfor %}                 
-                </div>
-            </div>
 
                 <div class="d-flex justify-content-center">
-                <div class="card shadow my-3 p-5 w-sm-75 w-100">
-                    <h3>نظر خود را وارد کنید:</h3>
-                    <form method="POST">
-                        <div class="form-group py-2">
-                            <label class="py-1" for="author_name">نام شما:</label>
-                            <input type="text" class="form-control" placeholder="علی علوی" name="author_name">
-                        </div>
-                        <div class="form-group py-2">
-                            <label class="py-1" for="email">ایمیل شما:</label>
-                            <input type="email" class="form-control" placeholder="example@gmail.com" name="email">
-                        </div>
-                        <div class="form-group py-2">
-                            <label class="py-1" for="comment_text">متن نظر:</label>
-                            <textarea class="form-control" name="text" rows="3"
-                                      placeholder="نظر خود را اینجا وارد کنید."></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">ارسال</button>
-                    </form>
+                    <div class="card shadow my-3 p-5 w-sm-75 w-100">
+                        <h2 class="mb-5">نظرات:</h2>
+                        {% for comment in comments %}
+                            {% if comment.is_active %}
+                                <div class="border-bottom mb-3">
+                                    <h5 class="mb-3">{{ comment.user.username }} نظر داد که:</h5>
+                                    <p>{{ comment.text|linebreaks }}</p>
+                                    {% if comment.recommend %}
+                                        <p class="align-self-center pt-2 text-end" style="color: #40c057;">
+                                            توصیه میکنم</p>
+                                    {% else %}
+                                        <p class="align-self-center pt-2 text-end" style="color: red">
+                                            توصیه نمیکنم</p>
+                                    {% endif %}
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
                 </div>
-            </div>
+
+                <div class="d-flex justify-content-center">
+                    <div class="card shadow my-3 p-5 w-sm-75 w-100">
+                        <h3>نظر خود را وارد کنید:</h3>
+                        <form method="POST">
+                            {% csrf_token %}
+                            {{ comment_form|crispy }}
+                            <button type="submit" class="btn btn-primary">ارسال</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
