add user to book model the publisher

--- a/books/Templates/books/book_detail.html
+++ b/books/Templates/books/book_detail.html
@@ -41,6 +41,8 @@
                             <h5 class="small my-1"><span class="text-muted">نویسنده: </span>{{ book.author }}</h5>
                             <h5 class="small my-1"><span class="text-muted">مترجم: </span>book.translator</h5>
                             <h5 class="small my-1"><span class="text-muted">انتشارات: </span>publisher</h5>
+                            <h5 class="small my-1"><span class="text-muted">یوزر: </span>{{ book.user }}</h5>
+
                         </div>
                         <div class="col-xs-12 col-md-3 d-flex flex-column">
                             <h3 class="align-self-center pt-2 text-muted align-self-md-end">
